[역량관리] 병적사항 + 학력/자격증 첨부파일 + 이공계 학위 추가
- 병적사항(C12 코드, 본인 입력만): User 엔티티 + CodeConstants.MilitaryStatus
  + settings 화면 입력 UI + admin-competency 열람/엑셀 export
- 학력/자격증 첨부파일: 신규 엔티티/리포지토리/DTO + 업로드/다운로드/삭제 API
  + settings 모달에서 등록/삭제, 관리자 화면에서 칩 클릭 미리보기
- 학력에 이공계(STEM) 여부 체크박스 추가
- 학력 1건 이상 + 학력/자격증 첨부 1개 이상 필수 검증